<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/relayNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/relay_dialog_hint_name"
            android:ems="10" />

        <EditText
            android:id="@+id/relayGpioEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/relay_dialog_hint_gpio"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/relayInvertedCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:tag="Inverted"
            android:text="@string/relay_dialog_hint_inverted"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relay_dialog_hint_inverted_text" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>